syntax = "proto3";

option java_multiple_files = true;
option java_package = "alluxio.grpc";
option java_outer_classname = "FileSystemMasterProto";

package alluxio.grpc.proto;

import "proto/common.proto";

message FileSystemMasterCommonOptions {
  int64 syncIntervalMs = 1;
}

enum LoadMetadataType {
  NEVER = 0;  // Never load metadata.
  ONCE = 1;  // Load metadata only once.
  ALWAYS = 2;  // Always load metadata.
}

message GetStatusRequest {
  LoadMetadataType loadMetadataType = 1;
  FileSystemMasterCommonOptions commonOptions = 2;
}

message GetStatusResponse {
  FileInfo fileInfo = 1;
}

/**
* Contains the information of a block in a file. In addition to the BlockInfo, it includes the
* offset in the file, and the under file system locations of the block replicas.
*/
message FileBlockInfo {
  proto.BlockInfo blockInfo = 1;
  int64 offset = 2;
  repeated proto.WorkerNetAddress ufsLocations = 3; // deprecated since 1.1 will be removed in 2.0 (replaced by ufsStringLocations)
  repeated string ufsStringLocations = 4;
}

message FileInfo {
  int64 fileId = 1;
  string name = 2;
  string path = 3;
  string ufsPath = 4;
  int64 length = 5;
  int64 blockSizeBytes = 6;
  int64 creationTimeMs = 7;
  bool completed = 8;
  bool folder = 9;
  bool pinned = 10;
  bool cacheable = 11;
  bool persisted = 12;
  repeated int64 blockIds = 13;
  int64 lastModificationTimeMs = 14;
  int64 ttl = 15;
  string owner = 16;
  string group = 17;
  int32 mode = 18;
  string persistenceState = 19;
  bool mountPoint = 20;
  repeated FileBlockInfo fileBlockInfos = 21;
  proto.TtlAction ttlAction = 22;
  int64 mountId = 23;
  int32 inAlluxioPercentage = 24;
  string ufsFingerprint = 25;
}

service FileSystemMasterService {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
}
